deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: formbuilder-submit-product
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: formbuilder-submit-product
    spec:
      securityContext:
        runAsUser: 999
      containers:
      - name: submit-product
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/formbuilder/fb-submit-product:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
