deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: formbuilder-submit-product
spec:
  tls:
    - hosts:
      - submit-product.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: submit-product.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: formbuilder-submit-product
          servicePort: 3000
